pkl-core/src/test/files/LanguageSnippetTests/input/errors/delimiters/missingFunction0ParameterListDelimiter.pkl
f = ( -> 42
res1 = 42



